--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@polymer/iron-meta": "3.0.1",
     "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
+    "@vaadin-component-factory/vcf-nav": "1.0.6",
     "@vaadin/accordion": "23.3.2",
     "@vaadin/app-layout": "23.3.2",
     "@vaadin/avatar": "23.3.2",
@@ -15,7 +16,7 @@
     "@vaadin/board": "23.3.2",
     "@vaadin/bundles": "23.3.2",
     "@vaadin/button": "23.3.2",
-    "@vaadin/charts": "23.3.2",
+    "@vaadin/charts": "23.0.0",
     "@vaadin/checkbox": "23.3.2",
     "@vaadin/checkbox-group": "23.3.2",
     "@vaadin/combo-box": "23.3.2",
@@ -73,7 +74,7 @@
     "@vaadin/vaadin-avatar": "23.3.2",
     "@vaadin/vaadin-board": "23.3.2",
     "@vaadin/vaadin-button": "23.3.2",
-    "@vaadin/vaadin-charts": "23.3.2",
+    "@vaadin/vaadin-charts": "23.0.0",
     "@vaadin/vaadin-checkbox": "23.3.2",
     "@vaadin/vaadin-combo-box": "23.3.2",
     "@vaadin/vaadin-confirm-dialog": "23.3.2",
@@ -119,6 +120,7 @@
     "@vaadin/virtual-list": "23.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
+    "line-awesome": "1.3.0",
     "lit": "2.4.1",
     "proj4": "2.8.0"
   },
@@ -257,7 +259,9 @@
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
     "proj4": "$proj4",
     "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/tooltip": "$@vaadin/tooltip"
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "line-awesome": "$line-awesome",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav"
   },
   "vaadin": {
     "dependencies": {
@@ -267,6 +271,7 @@
       "@polymer/iron-meta": "3.0.1",
       "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
       "@vaadin/accordion": "23.3.2",
       "@vaadin/app-layout": "23.3.2",
       "@vaadin/avatar": "23.3.2",
@@ -274,7 +279,7 @@
       "@vaadin/board": "23.3.2",
       "@vaadin/bundles": "23.3.2",
       "@vaadin/button": "23.3.2",
-      "@vaadin/charts": "23.3.2",
+      "@vaadin/charts": "23.0.0",
       "@vaadin/checkbox": "23.3.2",
       "@vaadin/checkbox-group": "23.3.2",
       "@vaadin/combo-box": "23.3.2",
@@ -332,7 +337,7 @@
       "@vaadin/vaadin-avatar": "23.3.2",
       "@vaadin/vaadin-board": "23.3.2",
       "@vaadin/vaadin-button": "23.3.2",
-      "@vaadin/vaadin-charts": "23.3.2",
+      "@vaadin/vaadin-charts": "23.0.0",
       "@vaadin/vaadin-checkbox": "23.3.2",
       "@vaadin/vaadin-combo-box": "23.3.2",
       "@vaadin/vaadin-confirm-dialog": "23.3.2",
@@ -378,6 +383,7 @@
       "@vaadin/virtual-list": "23.3.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
+      "line-awesome": "1.3.0",
       "lit": "2.4.1",
       "proj4": "2.8.0"
     },
@@ -397,6 +403,6 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "207bb5db873cbc214d522d2be910ec64d3cc1928e1899b1eb522edfbfa070416"
+    "hash": "951e24df8b6625557d6895bbfa6e2bce7ebe172426fcfc2363eb90253d4d32ed"
   }
 }
